
add_subdirectory(assorted)
add_subdirectory(cache)
add_subdirectory(debugging)
add_subdirectory(fs)
add_subdirectory(log)
add_subdirectory(memory)
add_subdirectory(storage)
add_subdirectory(snapshot)
add_subdirectory(thread)
add_subdirectory(xct)

set(FOEDUS_CHILD_SRC
    ${FOEDUS_ASSORTED_SRC}
    ${FOEDUS_CACHE_SRC}
    ${FOEDUS_DEBUGGING_SRC}
    ${FOEDUS_FS_SRC}
    ${FOEDUS_LOG_SRC}
    ${FOEDUS_MEMORY_SRC}
    ${FOEDUS_SNAPSHOT_SRC}
    ${FOEDUS_STORAGE_SRC}
    ${FOEDUS_THREAD_SRC}
    ${FOEDUS_XCT_SRC}
)
set(FOEDUS_SRC
    ${FOEDUS_CHILD_SRC}
    ${CMAKE_CURRENT_SOURCE_DIR}/engine.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/engine_options.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/engine_pimpl.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/error_stack.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/error_stack_batch.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/initializable.cpp
    PARENT_SCOPE)
